--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,11 @@ DB_CONNECTION=sqlite
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
+# DB_URL=
+
+# GOOGLE_CLIENT_ID=
+# GOOGLE_CLIENT_SECRET=
+# GOOGLE_CLIENT_REDIRECT=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
