--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@headlessui/react": "^2.2.0",
         "@hookform/resolvers": "^4.1.3",
         "@inertiajs/react": "^2.0.5",
+        "@lottiefiles/dotlottie-react": "^0.13.3",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.4",
         "@radix-ui/react-collapsible": "^1.1.3",
