Sprint 2 Make Send MOU functional and approvement functional

--- a/package.json
+++ b/package.json
@@ -52,10 +52,13 @@
         "docx-preview": "^0.3.5",
         "docxtemplater": "^3.61.0",
         "embla-carousel-react": "^8.6.0",
+        "fs": "^0.0.1-security",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^1.0",
+        "libreoffice-convert": "^1.6.1",
         "lucide-react": "^0.475.0",
         "motion": "^12.5.0",
+        "pdf-lib": "^1.17.1",
         "pizzip": "^3.1.8",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
@@ -66,6 +69,7 @@
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2",
         "usehooks-ts": "^3.1.1",
+        "util": "^0.12.5",
         "vite": "^6.0",
         "zod": "^3.24.2"
     },
