--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@tailwindcss/typography": "^0.5.16",
         "@types/node": "^22.13.5",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
@@ -23,23 +24,40 @@
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
+        "@excalidraw/excalidraw": "^0.18.0",
         "@headlessui/react": "^2.2.0",
         "@hookform/resolvers": "^4.1.3",
         "@inertiajs/react": "^2.0.5",
+        "@lexical/code": "^0.30.0",
+        "@lexical/file": "^0.30.0",
+        "@lexical/hashtag": "^0.30.0",
+        "@lexical/link": "^0.30.0",
+        "@lexical/list": "^0.30.0",
+        "@lexical/markdown": "^0.30.0",
+        "@lexical/overflow": "^0.30.0",
+        "@lexical/rich-text": "^0.30.0",
+        "@lexical/selection": "^0.30.0",
+        "@lexical/table": "^0.30.0",
+        "@lexical/text": "^0.30.0",
+        "@lexical/utils": "^0.30.0",
         "@lottiefiles/dotlottie-react": "^0.13.3",
         "@radix-ui/react-avatar": "^1.1.3",
-        "@radix-ui/react-checkbox": "^1.1.4",
+        "@radix-ui/react-checkbox": "^1.1.5",
         "@radix-ui/react-collapsible": "^1.1.3",
-        "@radix-ui/react-dialog": "^1.1.6",
+        "@radix-ui/react-dialog": "^1.1.7",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
-        "@radix-ui/react-label": "^2.1.2",
+        "@radix-ui/react-icons": "^1.3.2",
+        "@radix-ui/react-label": "^2.1.3",
         "@radix-ui/react-navigation-menu": "^1.2.5",
-        "@radix-ui/react-select": "^2.1.6",
-        "@radix-ui/react-separator": "^1.1.2",
+        "@radix-ui/react-popover": "^1.1.7",
+        "@radix-ui/react-scroll-area": "^1.2.4",
+        "@radix-ui/react-select": "^2.1.7",
+        "@radix-ui/react-separator": "^1.1.3",
         "@radix-ui/react-slot": "^1.2.0",
-        "@radix-ui/react-toggle": "^1.1.2",
-        "@radix-ui/react-toggle-group": "^1.1.2",
-        "@radix-ui/react-tooltip": "^1.1.8",
+        "@radix-ui/react-tabs": "^1.1.4",
+        "@radix-ui/react-toggle": "^1.1.3",
+        "@radix-ui/react-toggle-group": "^1.1.3",
+        "@radix-ui/react-tooltip": "^1.2.0",
         "@supabase/supabase-js": "^2.49.3",
         "@tailwindcss/vite": "^4.0.6",
         "@types/react": "^19.0.3",
@@ -48,21 +66,28 @@
         "axios": "^1.8.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "concurrently": "^9.0.1",
         "docx-preview": "^0.3.5",
         "docxtemplater": "^3.61.0",
         "embla-carousel-react": "^8.6.0",
         "fs": "^0.0.1-security",
         "globals": "^15.14.0",
+        "katex": "^0.16.22",
         "laravel-vite-plugin": "^1.0",
         "libreoffice-convert": "^1.6.1",
+        "lodash-es": "^4.17.21",
         "lucide-react": "^0.475.0",
         "motion": "^12.5.0",
         "pdf-lib": "^1.17.1",
         "pizzip": "^3.1.8",
         "react": "^19.0.0",
+        "react-colorful": "^5.6.1",
         "react-dom": "^19.0.0",
+        "react-error-boundary": "^5.0.0",
         "react-hook-form": "^7.54.2",
+        "reactjs-tiptap-editor": "^0.2.29",
+        "sonner": "^2.0.3",
         "swiper": "^11.2.6",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
