Sprint 2 Finish Pengajuan Mitra Fiture (responsive soon)

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,8 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+VITE_TEMPLATE_MOU=
+
 VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
 
