Sprint 3 finish customer transaction except connect midtrans callback and crown job to terminate the transaction time limit

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,9 @@ VITE_TEMPLATE_MOU=
 VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
 
+VITE_MIDTRANS_CLIENT_ID =
+VITE_MIDTRANS_SERVER_KEY =
+
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
