--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "react-hook-form": "^7.54.2",
         "swiper": "^11.2.6",
         "tailwind-merge": "^3.0.1",
+        "tailwind-scrollbar": "^4.0.2",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2",
