--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
         "swiper": "^11.2.6",
+        "swr": "^2.3.3",
         "tailwind-merge": "^3.0.1",
         "tailwind-scrollbar": "^4.0.2",
         "tailwindcss": "^4.0.0",
