--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "react-colorful": "^5.6.1",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
+        "recharts": "^2.15.3",
         "swiper": "^11.2.6",
         "swr": "^2.3.3",
         "tailwind-merge": "^3.0.1",
