--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@faker-js/faker": "^9.8.0",
         "@tailwindcss/typography": "^0.5.16",
         "@types/node": "^22.13.5",
         "eslint": "^9.17.0",
