--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "typescript": "^5.7.2",
         "usehooks-ts": "^3.1.1",
         "util": "^0.12.5",
+        "uuid": "^11.1.0",
         "vite": "^6.0",
         "zod": "^3.24.2"
     },
